[gd_scene load_steps=13 format=3 uid="uid://cvpiwx081xtad"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_c1p4s"]
[ext_resource type="Texture2D" uid="uid://t7lbai4iwbp7" path="res://Sprites/floor2.png" id="1_qo1dg"]
[ext_resource type="PackedScene" uid="uid://dr1n0gdxqef55" path="res://Scenes/queen.tscn" id="3_mr345"]
[ext_resource type="PackedScene" uid="uid://cjqhut1o3jeie" path="res://Scenes/minis.tscn" id="4_ulhwl"]
[ext_resource type="PackedScene" uid="uid://br3ht37gdw4sy" path="res://Scenes/bully.tscn" id="5_65wrh"]
[ext_resource type="Script" path="res://Scripts/allMinis.gd" id="5_iwjhi"]
[ext_resource type="PackedScene" uid="uid://741oangkp2fb" path="res://Scenes/light.tscn" id="7_qdpux"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_388dd"]
texture = ExtResource("1_qo1dg")
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_2 = true
3:0/0 = 0
3:0/0/custom_data_2 = true
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/custom_data_0 = true
2:1/0 = 0
2:1/0/custom_data_2 = true
3:1/0 = 0
3:1/0/custom_data_2 = true
0:2/0 = 0
0:2/0/custom_data_1 = true
1:2/0 = 0
1:2/0/custom_data_1 = true
0:3/0 = 0
0:3/0/custom_data_1 = true
1:3/0 = 0
1:3/0/custom_data_1 = true

[sub_resource type="TileSet" id="TileSet_htc6d"]
custom_data_layer_0/name = "dance"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "security"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "back"
custom_data_layer_2/type = 1
sources/0 = SubResource("TileSetAtlasSource_388dd")

[sub_resource type="Animation" id="Animation_n18hd"]
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/BlueLight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(97.7059, -1.0033)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lights/RedLight2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(103.688, 102.337)]
}

[sub_resource type="Animation" id="Animation_550hc"]
resource_name = "lightMovement"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/BlueLight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 6, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.996994, 1.19209e-07), Vector2(94.7149, -1.0033), Vector2(46.859, 109.36), Vector2(0.996994, 63.208), Vector2(0.996994, 1.19209e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lights/RedLight2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 6, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(103.688, 102.337), Vector2(-0.997002, 92.3037), Vector2(55.8319, -38.1254), Vector2(98.7029, 69.2278), Vector2(103.688, 102.337)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0vsa"]
_data = {
"RESET": SubResource("Animation_n18hd"),
"lightMovement": SubResource("Animation_550hc")
}

[node name="Level" type="Node2D"]
scale = Vector2(1.00301, 0.99671)
script = ExtResource("1_c1p4s")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(87, 89)
scale = Vector2(0.1, 0.1)
offset = Vector2(-33.085, -36.97)
zoom = Vector2(4.465, 4.465)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_htc6d")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 65536, 0, -65536, 65536, 0, -65535, 65536, 0, -65534, 65536, 0, -65533, 65536, 0, -65532, 65536, 0, -65531, 65536, 0, -65530, 65536, 0, 6, 65536, 0, 65542, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 262150, 65536, 0, 327686, 65536, 0, 393222, 65536, 0, 393221, 65536, 0, 393220, 65536, 0, 393219, 65536, 0, 393218, 65536, 0, 393217, 65536, 0, 393216, 65536, 0, 458751, 65536, 0, 393215, 65536, 0, 327679, 65536, 0, 262144, 65536, 0, 262143, 65536, 0, 196607, 65536, 0, 131071, 65536, 0, 65535, 65536, 0, 0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 196611, 65536, 0, 131075, 65536, 0, 65539, 65536, 0, 65538, 65536, 0, 65537, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 196609, 65536, 0, 131073, 65536, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 327680, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 262147, 65536, 0, 262148, 65536, 0, 196612, 65536, 0, 131076, 65536, 0, 65540, 65536, 0, 65541, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 65536, 0, 327684, 65536, 0, -65538, 65536, 2, -65537, 65536, 2, -131072, 65536, 2, -131071, 65536, 2, -131070, 65536, 2, -131069, 65536, 2, -131068, 65536, 2, -131067, 65536, 2, -131066, 65536, 2, -131065, 65536, 2, -65529, 65536, 2, 7, 65536, 2, 65543, 65536, 2, 131079, 65536, 2, 196615, 65536, 2, 262151, 65536, 2, 327687, 65536, 2, 393223, 65536, 2, 458759, 65536, 2, 458758, 65536, 2, 458757, 65536, 2, 458756, 65536, 2, 458755, 65536, 2, 458754, 65536, 2, 458753, 65536, 2, 458752, 65536, 2, 524287, 65536, 2, 524286, 65536, 2, 458750, 65536, 2, 393214, 65536, 2, 327678, 65536, 2, 262142, 65536, 2, 196606, 65536, 2, 131070, 65536, 2, 65534, 65536, 2, -2, 65536, 2, -131075, 196608, 1, -131074, 196608, 1, -131073, 196608, 1, -196608, 196608, 1, -196607, 196608, 1, -196606, 196608, 1, -196605, 196608, 1, -196604, 196608, 1, -196603, 196608, 1, -196602, 196608, 1, -196601, 196608, 1, -196600, 196608, 1, -131064, 196608, 1, -65528, 196608, 1, 8, 196608, 1, 65544, 196608, 1, 131080, 196608, 1, 196616, 196608, 1, 262152, 196608, 1, 327688, 196608, 1, 393224, 196608, 1, 458760, 196608, 1, 524296, 196608, 1, 524295, 196608, 1, 524294, 196608, 1, 524293, 196608, 1, 524292, 196608, 1, 524291, 196608, 1, 524290, 196608, 1, 524289, 196608, 1, 524288, 196608, 1, 589823, 196608, 1, 589822, 196608, 1, 589821, 196608, 1, 524285, 196608, 1, 458749, 196608, 1, 393213, 196608, 1, 327677, 196608, 1, 262141, 196608, 1, 196605, 196608, 1, 131069, 196608, 1, 65533, 196608, 1, -3, 196608, 1, -65539, 196608, 1)

[node name="Queen" parent="." instance=ExtResource("3_mr345")]
position = Vector2(47.8559, 46.1518)
safetyMargin = 0.0

[node name="allMinis" type="Node2D" parent="."]
script = ExtResource("5_iwjhi")

[node name="minis" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(71.7839, 23.0759)

[node name="minis3" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(55.832, 7.02311)

[node name="minis5" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(40.877, 7.02311)

[node name="minis7" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(39.88, 103.34)

[node name="minis8" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(71.7839, 87.2872)

[node name="minis9" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(6.979, 87.2872)

[node name="minis10" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(-7.97599, 103.34)

[node name="minis4" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(8.97299, 23.0759)

[node name="minis6" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(23.928, 55.1815)

[node name="minis2" parent="allMinis" instance=ExtResource("4_ulhwl")]
position = Vector2(72.7809, 55.1815)

[node name="Bullies" type="Node2D" parent="."]

[node name="BullyLeft" parent="Bullies" instance=ExtResource("5_65wrh")]
position = Vector2(-23.928, 55.1815)
cooldownSpeedFactor = 0.5
rushSpeedFactor = 2

[node name="BullyRight" parent="Bullies" instance=ExtResource("5_65wrh")]
position = Vector2(119.64, 55.1815)
rotation = 3.14159
scale = Vector2(1, -1)
cooldownSpeedFactor = 0.5
rushSpeedFactor = 2
lowSide = false
directionDash = Vector2(-1, 0)
directionRegular = Vector2(0, 1)

[node name="BullyUp" parent="Bullies" instance=ExtResource("5_65wrh")]
position = Vector2(39.88, -24.0792)
cooldownSpeedFactor = 0.5
rushSpeedFactor = 2
horizontalMovement = true
directionDash = Vector2(0, 1)
directionRegular = Vector2(1, 0)

[node name="BullyDown" parent="Bullies" instance=ExtResource("5_65wrh")]
position = Vector2(55.8319, 119.393)
rotation = 3.14159
scale = Vector2(1, -1)
cooldownSpeedFactor = 0.5
rushSpeedFactor = 2
horizontalMovement = true
lowSide = false
directionDash = Vector2(0, -1)
directionRegular = Vector2(-1, 0)

[node name="Lights" type="Node2D" parent="."]

[node name="BlueLight" parent="Lights" instance=ExtResource("7_qdpux")]
position = Vector2(97.7059, -1.0033)
color = Color(0.596986, 0.561741, 0.986516, 1)
energy = 0.3
texture_scale = 4.24

[node name="RedLight2" parent="Lights" instance=ExtResource("7_qdpux")]
position = Vector2(103.688, 102.337)
color = Color(1, 0, 0, 1)
energy = 5.32
texture_scale = 4.24

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_b0vsa")
}
autoplay = "lightMovement"
speed_scale = 5.0

[connection signal="queenTouch" from="Queen" to="." method="_on_queen_queen_touch"]
[connection signal="iGotHit" from="allMinis/minis" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis3" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis5" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis7" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis8" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis9" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis10" to="allMinis" method="_on_minis_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis4" to="allMinis" method="_on_minis_4_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis6" to="allMinis" method="_on_minis_6_i_got_hit"]
[connection signal="iGotHit" from="allMinis/minis2" to="allMinis" method="_on_minis_2_i_got_hit"]
